One more attempt to fix the scrollbar margins

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -63,6 +63,7 @@ body {
 .sidebar_mhZE {
   position: fixed !important;
   padding-bottom: 33px;
+  height: 80% !important;
 }
 /* Make the navbar move with the page */
 /* .sidebarViewport_node_modules-\@docusaurus-theme-classic-lib-theme-DocPage-Layout-Sidebar-styles-module {
